[tool.poetry]
name = "pack"
version = "0.1.0"
description = "Dependency packer. Prunes dependencies from a core package if they are not required by a specific project."
authors = ["Rami Awar <rami.awar.ra@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7"
nbformat = "^5.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 120